--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ ext {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+
 }
 
 test {
@@ -34,6 +35,7 @@ project.ext.lwjglNatives = "natives-windows"
 
 
 dependencies {
+    //box2d
 
     //GSON
     implementation 'com.google.code.gson:gson:2.11.0'
