--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Dockspace Demo]
-Pos=0,0
-Size=1920,1051
+Pos=0,-29
+Size=1920,1080
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,20 +9,20 @@ Size=400,400
 Collapsed=0
 
 [Window][Level Editor Stuff]
-Pos=8,46
-Size=772,498
+Pos=8,17
+Size=772,1026
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Test window]
-Pos=782,46
+Pos=782,17
 Size=1130,124
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Game Viewport]
-Pos=782,172
-Size=1130,871
+Pos=782,143
+Size=1130,900
 Collapsed=0
 DockId=0x00000002,0
 
@@ -37,8 +37,14 @@ Pos=83,1
 Size=618,351
 Collapsed=0
 
+[Window][Scene Hierarchy]
+ViewportPos=60,89
+ViewportId=0x9A68760C
+Size=265,1074
+Collapsed=0
+
 [Docking][Data]
-DockSpace     ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,46 Size=1904,997 Split=X Selected=0xAE7BB42F
+DockSpace     ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,46 Size=1904,1026 Split=X Selected=0xAE7BB42F
   DockNode    ID=0x00000003 Parent=0x6D3A3A6E SizeRef=772,1026 Split=Y Selected=0x4D7EC7FC
     DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=423,513 Selected=0x4D7EC7FC
     DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=423,511 Selected=0xE927CF2F
