--- a/build.gradle
+++ b/build.gradle
@@ -30,17 +30,19 @@ test {
 project.ext.lwjglVersion = "3.3.5"
 project.ext.jomlVersion = "1.10.7"
 project.ext.lwjglNatives = "natives-windows"
+project.ext.imguiVersion = '1.81.0'
 
 
 
 
 dependencies {
     //box2d
-
+    implementation fileTree('libs') { include '*.jar' }
     //GSON
     implementation 'com.google.code.gson:gson:2.11.0'
     // Imgui files
-    implementation fileTree('libs') { include '*.jar' }
+    implementation "io.github.spair:imgui-java-app:$imguiVersion"
+
     //lwjgl files
     implementation platform("org.lwjgl:lwjgl-bom:$lwjglVersion")
 
