--- a/imgui.ini
+++ b/imgui.ini
@@ -1,54 +1,49 @@
+[Window][Debug##Default]
+ViewportPos=1901,30
+ViewportId=0x9F5F46A1
+Size=867,991
+Collapsed=0
+
 [Window][Dockspace Demo]
 Pos=0,-29
 Size=1920,1080
 Collapsed=0
 
-[Window][Debug##Default]
-Pos=60,60
-Size=400,400
-Collapsed=0
-
 [Window][Level Editor Stuff]
 Pos=8,17
-Size=772,1026
+Size=188,1026
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000004,0
 
 [Window][Test window]
-Pos=782,17
-Size=1130,124
-Collapsed=0
-DockId=0x00000001,0
-
-[Window][Game Viewport]
-Pos=782,143
-Size=1130,900
+Pos=198,17
+Size=1447,157
 Collapsed=0
 DockId=0x00000002,0
 
-[Window][Dear ImGui Demo]
-Pos=8,546
-Size=772,497
+[Window][Game Viewport]
+Pos=198,176
+Size=1447,867
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][Scene Hierarchy]
+Pos=1647,17
+Size=265,1026
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Properties]
-Pos=83,1
-Size=618,351
-Collapsed=0
-
-[Window][Scene Hierarchy]
-ViewportPos=60,89
-ViewportId=0x9A68760C
-Size=265,1074
+Pos=60,60
+Size=215,134
 Collapsed=0
 
 [Docking][Data]
-DockSpace     ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,46 Size=1904,1026 Split=X Selected=0xAE7BB42F
-  DockNode    ID=0x00000003 Parent=0x6D3A3A6E SizeRef=772,1026 Split=Y Selected=0x4D7EC7FC
-    DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=423,513 Selected=0x4D7EC7FC
-    DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=423,511 Selected=0xE927CF2F
-  DockNode    ID=0x00000004 Parent=0x6D3A3A6E SizeRef=1130,1026 Split=Y
-    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=1904,124 Selected=0x8081D1E6
-    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=1904,900 CentralNode=1 Selected=0xAE7BB42F
+DockSpace       ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,46 Size=1904,1026 Split=X
+  DockNode      ID=0x00000001 Parent=0x6D3A3A6E SizeRef=1637,1026 Split=X
+    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=219,1026 Selected=0x4D7EC7FC
+    DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=1683,1026 Split=Y
+      DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=1904,157 Selected=0x8081D1E6
+      DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=1904,867 CentralNode=1 Selected=0xAE7BB42F
+  DockNode      ID=0x00000006 Parent=0x6D3A3A6E SizeRef=265,1026 Selected=0x9A68760C
 
