--- a/imgui.ini
+++ b/imgui.ini
@@ -1,49 +1,45 @@
-[Window][Debug##Default]
-ViewportPos=1901,30
-ViewportId=0x9F5F46A1
-Size=867,991
-Collapsed=0
-
 [Window][Dockspace Demo]
 Pos=0,-29
-Size=3840,2160
+Size=1920,1200
+Collapsed=0
+
+[Window][Debug##Default]
+Pos=60,60
+Size=400,400
 Collapsed=0
 
 [Window][Level Editor Stuff]
 Pos=8,17
-Size=589,2106
+Size=219,1146
+Collapsed=0
+DockId=0x00000007,0
+
+[Window][Test window]
+Pos=229,17
+Size=1447,162
+Collapsed=0
+DockId=0x00000001,0
+
+[Window][Game Viewport]
+Pos=229,181
+Size=1447,870
+Collapsed=0
+DockId=0x00000005,0
+
+[Window][Scene Hierarchy]
+Pos=1678,17
+Size=234,1146
 Collapsed=0
 DockId=0x00000004,0
 
-[Window][Test window]
-Pos=599,17
-Size=2698,157
-Collapsed=0
-DockId=0x00000002,0
-
-[Window][Game Viewport]
-Pos=599,176
-Size=2698,1947
-Collapsed=0
-DockId=0x00000003,0
-
-[Window][Scene Hierarchy]
-Pos=3299,17
-Size=533,2106
-Collapsed=0
-DockId=0x00000006,0
-
-[Window][Properties]
-Pos=12,463
-Size=215,134
-Collapsed=0
-
 [Docking][Data]
-DockSpace       ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,46 Size=3824,2106 Split=X
-  DockNode      ID=0x00000001 Parent=0x6D3A3A6E SizeRef=1637,1026 Split=X
-    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=589,1026 Selected=0x4D7EC7FC
-    DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=2698,1026 Split=Y
-      DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=1904,157 Selected=0x8081D1E6
-      DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=1904,867 CentralNode=1 Selected=0xAE7BB42F
-  DockNode      ID=0x00000006 Parent=0x6D3A3A6E SizeRef=265,1026 Selected=0x9A68760C
+DockSpace         ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,46 Size=1904,1146 Split=X
+  DockNode        ID=0x00000007 Parent=0x6D3A3A6E SizeRef=219,1146 Selected=0x4D7EC7FC
+  DockNode        ID=0x00000008 Parent=0x6D3A3A6E SizeRef=1683,1146 Split=X
+    DockNode      ID=0x00000003 Parent=0x00000008 SizeRef=1637,1146 Split=Y
+      DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1904,162 Selected=0x8081D1E6
+      DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1904,982 Split=Y
+        DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=1637,870 Selected=0xAE7BB42F
+        DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=1637,110 CentralNode=1
+    DockNode      ID=0x00000004 Parent=0x00000008 SizeRef=265,1146 Selected=0x9A68760C
 
