--- a/imgui.ini
+++ b/imgui.ini
@@ -9,37 +9,35 @@ Size=400,400
 Collapsed=0
 
 [Window][Level Editor Stuff]
-Pos=8,17
+ViewportPos=-16,474
+ViewportId=0x4D7EC7FC
 Size=440,2106
 Collapsed=0
-DockId=0x00000007,0
 
 [Window][Test window]
-Pos=450,17
-Size=2909,132
+Pos=8,17
+Size=3289,132
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Game Viewport]
-Pos=450,151
-Size=2909,1036
+Pos=8,151
+Size=3289,983
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Scene Hierarchy]
-Pos=3361,17
-Size=471,2106
+Pos=3299,17
+Size=533,2106
 Collapsed=0
 DockId=0x00000004,0
 
 [Docking][Data]
-DockSpace         ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,46 Size=3824,2106 Split=X
-  DockNode        ID=0x00000007 Parent=0x6D3A3A6E SizeRef=219,1146 Selected=0x4D7EC7FC
-  DockNode        ID=0x00000008 Parent=0x6D3A3A6E SizeRef=1683,1146 Split=X
-    DockNode      ID=0x00000003 Parent=0x00000008 SizeRef=1637,1146 Split=Y
-      DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1904,132 Selected=0x8081D1E6
-      DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1904,1972 Split=Y
-        DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=1637,1036 Selected=0xAE7BB42F
-        DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=1637,934 CentralNode=1
-    DockNode      ID=0x00000004 Parent=0x00000008 SizeRef=265,1146 Selected=0x9A68760C
+DockSpace       ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,46 Size=3824,2106 Split=X
+  DockNode      ID=0x00000003 Parent=0x6D3A3A6E SizeRef=1637,1146 Split=Y
+    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1904,132 Selected=0x8081D1E6
+    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1904,1972 Split=Y
+      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=3289,983 Selected=0xAE7BB42F
+      DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=3289,987 CentralNode=1
+  DockNode      ID=0x00000004 Parent=0x6D3A3A6E SizeRef=265,1146 Selected=0x9A68760C
 
