--- a/imgui.ini
+++ b/imgui.ini
@@ -1,43 +1,38 @@
+[Window][Debug##Default]
+ViewportPos=1901,30
+ViewportId=0x9F5F46A1
+Size=867,991
+Collapsed=0
+DockId=0x00000001,0
+
 [Window][Dockspace Demo]
 Pos=0,-29
 Size=3840,2160
 Collapsed=0
 
-[Window][Debug##Default]
-Pos=60,60
-Size=400,400
-Collapsed=0
-
 [Window][Level Editor Stuff]
-ViewportPos=-16,474
-ViewportId=0x4D7EC7FC
-Size=440,2106
+Pos=60,60
+Size=135,215
 Collapsed=0
 
 [Window][Test window]
-Pos=8,17
-Size=3289,132
+ViewportPos=230,196
+ViewportId=0x8081D1E6
+Size=102,1074
 Collapsed=0
-DockId=0x00000001,0
 
 [Window][Game Viewport]
-Pos=8,151
-Size=3289,983
+Pos=508,70
+Size=1201,775
 Collapsed=0
-DockId=0x00000005,0
 
 [Window][Scene Hierarchy]
-Pos=3299,17
-Size=533,2106
+ViewportPos=388,84
+ViewportId=0x9A68760C
+Size=170,1074
 Collapsed=0
-DockId=0x00000004,0
 
 [Docking][Data]
-DockSpace       ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,46 Size=3824,2106 Split=X
-  DockNode      ID=0x00000003 Parent=0x6D3A3A6E SizeRef=1637,1146 Split=Y
-    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1904,132 Selected=0x8081D1E6
-    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1904,1972 Split=Y
-      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=3289,983 Selected=0xAE7BB42F
-      DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=3289,987 CentralNode=1
-  DockNode      ID=0x00000004 Parent=0x6D3A3A6E SizeRef=265,1146 Selected=0x9A68760C
+DockNode  ID=0x00000001 Pos=1901,30 Size=867,991
+DockSpace ID=0x6D3A3A6E Window=0x091AB4BE Pos=8,27 Size=3824,2125 CentralNode=1
 
